generated/checkers/refine/KN-Integer-Overflow-c09d2eff-0/build_logs/syntax-repair-refine-1-2/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::isDirectWidenedUseTo64(const clang::Expr*, clang::ento::CheckerContext&, const clang::Stmt*&, const clang::Decl*&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:179:21: warning: unused variable ‘Ret’ [-Wunused-variable]
  179 |     if (const auto *Ret = dyn_cast_or_null<ReturnStmt>(PStmt)) {
      |                     ^~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::getMaxForExpr(const clang::Expr*, clang::ento::CheckerContext&, llvm::APSInt&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:246:11: warning: ISO C++ does not support ‘__int128’ for ‘L’ [-Wpedantic]
  246 |           __int128 L = LMax.isSigned() ? (__int128)LMax.getExtValue()
      |           ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:246:43: warning: ISO C++ does not support ‘__int128’ for ‘type name’ [-Wpedantic]
  246 |           __int128 L = LMax.isSigned() ? (__int128)LMax.getExtValue()
      |                                           ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:247:43: warning: ISO C++ does not support ‘__int128’ for ‘type name’ [-Wpedantic]
  247 |                                        : (__int128)LMax.getZExtValue();
      |                                           ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:248:11: warning: ISO C++ does not support ‘__int128’ for ‘R’ [-Wpedantic]
  248 |           __int128 R = RMax.isSigned() ? (__int128)RMax.getExtValue()
      |           ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:248:43: warning: ISO C++ does not support ‘__int128’ for ‘type name’ [-Wpedantic]
  248 |           __int128 R = RMax.isSigned() ? (__int128)RMax.getExtValue()
      |                                           ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:249:43: warning: ISO C++ does not support ‘__int128’ for ‘type name’ [-Wpedantic]
  249 |                                        : (__int128)RMax.getZExtValue();
      |                                           ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:250:11: warning: ISO C++ does not support ‘__int128’ for ‘S’ [-Wpedantic]
  250 |           __int128 S = BO->getOpcode() == BO_Add ? (L + R) : (L - R);
      |           ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:251:43: warning: ISO C++ does not support ‘__int128’ for ‘type name’ [-Wpedantic]
  251 |           uint64_t UB = S < 0 ? 0 : (S > (__int128)UINT64_MAX ? UINT64_MAX : (uint64_t)S);
      |                                           ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::looksLikeSizeContext(const clang::Stmt*, const clang::Decl*, const clang::BinaryOperator*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:361:21: warning: unused variable ‘Ret’ [-Wunused-variable]
  361 |     if (const auto *Ret = dyn_cast_or_null<ReturnStmt>(UseSiteStmt)) {
      |                     ^~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::looksLikeNonSizeEncodingContext(const clang::Stmt*, const clang::Decl*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:410:21: warning: unused variable ‘Ret’ [-Wunused-variable]
  410 |     if (const auto *Ret = dyn_cast_or_null<ReturnStmt>(UseSiteStmt)) {
      |                     ^~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkBind(clang::ento::SVal, clang::ento::SVal, const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:537:55: error: unable to deduce ‘const auto*’ from ‘Val.clang::ento::SVal::getAs<clang::ento::nonloc::ConcreteInt>()’
  537 |   if (const auto *CI = Val.getAs<nonloc::ConcreteInt>()) {
      |                                                       ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:537:55: note:   mismatched types ‘const auto*’ and ‘std::optional<clang::ento::nonloc::ConcreteInt>’
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
